oops - fix importmap

--- a/12tet/public/index.html
+++ b/12tet/public/index.html
@@ -69,8 +69,8 @@
 <script type="importmap">
   {
     "imports": {
-      "@char/aftercare": "https://tool.umm.gay/",
-      "@char/aftercare/jsx-runtime": "https://tool.umm.gay/"
+      "@char/aftercare": "https://tool.umm.gay/js/aftercare/mod.js",
+      "@char/aftercare/jsx-runtime": "https://tool.umm.gay/js/aftercare/jsx-runtime.js"
     }
   }
 </script>
