--- a/12tet/public/index.html
+++ b/12tet/public/index.html
@@ -61,9 +61,7 @@
 <main>
   <header>(by <a href="https://som.codes/">charlotte som</a>)</header>
 
-  <noscript>
-    please enable JavaScript to use this clientside application.
-  </noscript>
+  <noscript>please enable JavaScript to use this clientside application.</noscript>
 </main>
 
 <script type="importmap">
