--- a/irclogs/public/index.html
+++ b/irclogs/public/index.html
@@ -5,9 +5,7 @@
 <link rel="stylesheet" href="/index.css" />
 
 <main>
-  <noscript>
-    please enable JavaScript to use this clientside application.
-  </noscript>
+  <noscript>please enable JavaScript to use this clientside application.</noscript>
 </main>
 
 <script type="importmap">
