--- a/hub/public/index.html
+++ b/hub/public/index.html
@@ -1,70 +1,9 @@
 <!doctype html>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<style>
-  :root {
-    font-family: sans-serif;
-    font-size: 1.25rem;
-    background-color: var(--bg);
-    color: var(--text);
 
-    --bg: oklch(20.32% 0.0132 314.5);
-    --bg-raised: oklch(26.24% 0.0324 312.5);
-    --border-card: oklch(35.35% 0.0634 319.9);
-    --accent: oklch(67.03% 0.1119 335.5);
-    --text: oklch(94.56% 0.0437 335.5);
-  }
-
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-  }
-
-  main {
-    max-width: 960px;
-    padding: 1em;
-    margin: 0 auto;
-  }
-
-  h1 {
-    margin: 0 0 0.25em;
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 1em 0 0;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-  }
-
-  li {
-    display: flex;
-    flex-direction: column;
-
-    padding: 0.5em 0.75em;
-    background: var(--bg-raised);
-    border: 1px solid var(--border-card);
-    border-radius: 8px;
-  }
-
-  a {
-    color: var(--accent);
-    text-decoration: none;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  p {
-    margin: 0.2em 0 0;
-    font-size: 0.9rem;
-    opacity: 0.7;
-  }
-</style>
+<link rel="stylesheet" href="/common.css" />
+<link rel="stylesheet" href="/index.css" />
 
 <main>
   <h1>tool.umm.gay</h1>
